--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
 
   nginx:
     image: nginx:latest
-    ports:
-      - "8080:80"
+    expose:
+      - "80"
     volumes:
       - ./workspace/:/var/www/html/
       - ./.configs/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
