--- a/.configs/nginx/nginx.conf
+++ b/.configs/nginx/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name localhost;
+    server_name tienda.cfv.technology localhost;
     root /var/www/html/bagisto/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
