--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,20 @@
 services:
   php-fpm:
     build:
-      args:
-        uid: 1000
-        user: $USER
-        container_project_path: /var/www/html/
       context: .
       dockerfile: ./Dockerfile
-    image: php-fpm
-    ports:
-      - 5173:5173
+      args:
+        uid: 1000
+        user: bagisto
+        container_project_path: /var/www/html/
+    image: bagisto-php-fpm
     volumes:
-      - ~/.ssh:/home/$USER/.ssh
       - ./workspace/:/var/www/html/
 
   nginx:
     image: nginx:latest
     expose:
-      - "80"
+      - "80" # Traefik/Dokploy hablará con este puerto interno
     volumes:
       - ./workspace/:/var/www/html/
       - ./.configs/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
@@ -26,20 +23,17 @@ services:
 
   mysql:
     image: mysql:8.0
-    ports:
-      - 3306:3306
     command: --default-authentication-plugin=mysql_native_password
     environment:
       MYSQL_ROOT_HOST: "%"
       MYSQL_ROOT_PASSWORD: root
     volumes:
       - ./.configs/data/mysql-data:/var/lib/mysql/
-      - ./workspace/:/var/www/html/
 
   phpmyadmin:
     image: phpmyadmin:latest
-    ports:
-      - 8080:80
+    expose:
+      - "80" # solo interno; si se quiere dominio aparte, Dokploy lo expondrá
     environment:
       PMA_HOST: mysql
       PMA_USER: root
@@ -47,20 +41,17 @@ services:
       UPLOAD_LIMIT: 2G
       MEMORY_LIMIT: 2G
       MAX_EXECUTION_TIME: 600
+    depends_on:
+      - mysql
 
   redis:
     image: redis:6.2-alpine
-    ports:
-      - 6379:6379
     command: redis-server --save 20 1 --loglevel warning
     volumes:
       - ./.configs/data/redis-data:/data
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.0
-    ports:
-      - 9200:9200
-      - 9300:9300
     environment:
       - xpack.security.enabled=false
       - discovery.type=single-node
@@ -78,15 +69,13 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.0
-    ports:
-      - 5601:5601
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
     depends_on:
       - elasticsearch
 
   mailpit:
-    image: "axllent/mailpit:latest"
-    ports:
-      - 8025:8025
-      - 1025:1025
+    image: axllent/mailpit:latest
+    expose:
+      - "8025"
+      - "1025"
