feat: Update .env.example and docker-compose.yml for MySQL configuration improvements

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,7 @@ APP_USER=bagisto
 # ----------------------------------------------------------------------------
 
 # Database host (use 'mysql' for docker-compose internal network)
+# CRITICAL: Must be "mysql" (the service name), NOT "localhost"!
 DB_HOST=mysql
 
 # Database port
@@ -49,10 +50,13 @@ DB_PORT=3306
 DB_DATABASE=bagisto
 
 # Database username
+# If you use "root", no custom user is created
+# If you use a custom name (e.g., "cfvtienda"), MySQL will create it automatically
 DB_USERNAME=root
 
 # Database password
 # IMPORTANT: Change this to a strong password in production!
+# This password is used for both root and custom user (if DB_USERNAME is not "root")
 DB_PASSWORD=root
 
 # ----------------------------------------------------------------------------
