--- a/.configs/nginx/nginx.conf
+++ b/.configs/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name tienda.cfv.technology localhost;
-    root /var/www/html/bagisto/public;
+    root /var/www/html/public;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-Content-Type-Options "nosniff";
