--- a/.configs/nginx/nginx.conf
+++ b/.configs/nginx/nginx.conf
@@ -1,3 +1,6 @@
+# Resolver for Docker DNS (allows dynamic hostname resolution)
+resolver 127.0.0.11 valid=10s;
+
 server {
     listen 80;
     listen [::]:80;
@@ -21,7 +24,9 @@ server {
     error_page 404 /index.php;
 
     location ~ ^/index\.php(/|$) {
-        fastcgi_pass php-fpm:9000;
+        # Use variable to force runtime DNS resolution
+        set $upstream php-fpm:9000;
+        fastcgi_pass $upstream;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
