feat: Remove unused Docker DNS resolver and streamline PHP-FPM connection in Nginx configuration

--- a/.configs/nginx/nginx.conf
+++ b/.configs/nginx/nginx.conf
@@ -1,6 +1,3 @@
-# Resolver for Docker DNS (allows dynamic hostname resolution)
-resolver 127.0.0.11 valid=10s;
-
 server {
     listen 80;
     listen [::]:80;
@@ -24,12 +21,15 @@ server {
     error_page 404 /index.php;
 
     location ~ ^/index\.php(/|$) {
-        # Use variable to force runtime DNS resolution
-        set $upstream php-fpm:9000;
-        fastcgi_pass $upstream;
+        # Direct connection to PHP-FPM service (Docker networking handles DNS)
+        fastcgi_pass php-fpm:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
         fastcgi_hide_header X-Powered-By;
+
+        # Increase timeouts for initial Bagisto load
+        fastcgi_read_timeout 300;
+        fastcgi_send_timeout 300;
     }
 
     location ~ /\.(?!well-known).* {
